# brunnr

./: .dockerignore  .gitignore  AGENTS.md  ARTESIAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml
benchmarks/: README.md  checksums.txt
benchmarks/comparison/: README.md  codex-complete
benchmarks/comparison/samples/: locomo-smoke.json
benchmarks/corpus/: architecture.md  judge-gate.md  model-policy.md
benchmarks/harness/: run.py
benchmarks/large-corpus/: tasks.json
benchmarks/large-corpus/distractors/: api-style-guide.md  caching-faq.md  data-handling-faq.md  deployment-checklist.md  glossary.md  incident-response-playbook.md  march-outage-briefing.md  observability-overview.md  onboarding-guide.md  reliability-principles.md  security-overview.md  storage-overview.md
benchmarks/large-corpus/memory/: api-versioning.md  auth-token-ttl.md  backup-policy.md  caching-policy.md  cdn-policy.md  data-residency.md  datastore-choice.md  deploy-regions.md  deploy-strategy.md  event-bus.md  feature-flags.md  incident-egress-postmortem.md  incident-july-postmortem.md  incident-march-postmortem.md  incident-severity.md  job-semantics.md  log-retention.md  mobile-support.md  oncall-policy.md  password-hashing.md  pii-encryption.md  rate-limits.md  search-policy.md  session-policy.md  slo-policy.md  tenancy-model.md  upload-limits.md  webhook-policy.md
benchmarks/results/large-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/large-source-run/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/mega-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/mid-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/sample-run/: aggregate.json  charts.txt  checksums.txt  raw.jsonl  summary.csv
benchmarks/results/xl-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/seed-corpus/: README.md  tasks.json
benchmarks/seed-corpus/distractors/: auth-overview.md  caching-faq.md  db-migration-notes.md  db-pool-size-v1.md  glossary.md  job-worker-general.md  march-outage-briefing.md  pg-scaling.md  rate-limit-v1.md  reliability-principles.md
benchmarks/seed-corpus/memory/: auth-token-ttl.md  background-job-retry.md  datastore-choice.md  db-pool-size-v2.md  deploy-regions.md  feature-flags.md  incident-march-postmortem.md  pg-pool-config.md  rate-limit-v2.md  rate-limits.md  retry-policy.md
benchmarks/tasks/: tasks.json
benchmarks/tools/: generate_large_source_corpus.py  generate_xl_corpus.py
benchmarks/xl-corpus/: tasks.json
benchmarks/xl-corpus/distractors/: config-conventions.md  deploy-runbook.md  naming-guide.md  onboarding-index.md  platform-glossary.md  quota-overview.md  retention-overview.md  services-overview.md
benchmarks/xl-corpus/memory/: analytics-api.md  analytics-gateway.md  analytics-indexer.md  analytics-processor.md  analytics-scheduler.md  analytics-service.md  analytics-worker.md  archive-api.md  archive-gateway.md  archive-indexer.md  archive-processor.md  archive-scheduler.md  archive-worker.md  audit-api.md  audit-gateway.md  audit-indexer.md  audit-service.md  audit-worker.md  auth-api.md  auth-indexer.md  auth-processor.md  export-api.md  (+158 more)
crates/aquifer/: Cargo.toml
crates/artesian/: Cargo.toml  README.md
crates/artesian-bench/: Cargo.toml
crates/artesian-bench/src/: main.rs
crates/artesian-bench/tests/: qdrant.rs
crates/artesian-cli/: Cargo.toml
crates/artesian-cli/src/: brunnrd.rs  import.rs  main.rs  runs.rs  runtime.rs
crates/artesian-cli/tests/: cli.rs  process_shutdown.rs
crates/artesian-core/: Cargo.toml
crates/artesian-core/src/: agent.rs  config.rs  lib.rs  roles.rs
crates/artesian-core/tests/: agent_contract.rs  config_contract.rs  event_contract.rs  roles_contract.rs
crates/artesian-mcp/: Cargo.toml
crates/artesian-process-agent/: Cargo.toml
crates/artesian-process-agent/src/: lib.rs
crates/artesian-test-support/: Cargo.toml
crates/artesian/src/: lib.rs
crates/basin/: Cargo.toml
crates/basin/src/: lib.rs
crates/basin/tests/: orchestrator.rs
crates/brunnr-bench/: Cargo.toml
crates/brunnr-bench/src/: main.rs
crates/brunnr-bench/tests/: qdrant.rs
crates/brunnr-cli/: Cargo.toml
crates/brunnr-core/: Cargo.toml
crates/culvert/: Cargo.toml
crates/culvert/src/: files.rs  lib.rs  store.rs  vector.rs  verifier.rs
crates/culvert/tests/: task_store.rs
crates/delta/: Cargo.toml
crates/flume/: Cargo.toml
crates/gauge/: Cargo.toml
crates/gauge/src/: agentic.rs  eval.rs  lib.rs
crates/headgate/: Cargo.toml
crates/headgate/src/: bundle.rs  ccs.rs  compressor.rs  controller.rs  council.rs  gate.rs  judge.rs  lib.rs  llm.rs  metrics.rs  recall.rs
crates/headgate/tests/: cycle.rs
crates/mimisbrunnr/: Cargo.toml
crates/mimisbrunnr/src/: anchor.rs  backfill.rs  files.rs  identity.rs  lib.rs  pgvector.rs  qdrant.rs  sqlite_vec.rs  types.rs  upgrade.rs  vector.rs  vector_memory.rs
crates/mimisbrunnr/tests/: anchor.rs  backfill.rs  concurrency.rs  files_backend.rs  memory_backend_contract.rs  qdrant.rs  rechunk.rs  rrf.rs  survivability.rs  working_memory.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/sandbox/tests/: workspace_provider.rs
crates/tap/: Cargo.toml
crates/tap/src/: lib.rs  main.rs
crates/tap/tests/: memory_tools.rs
crates/thingr/: Cargo.toml
crates/thingr/src/: files.rs  lib.rs  store.rs  vector.rs
crates/thingr/tests/: task_store.rs
deploy/brunnr/: compose.yml
docs/: README.md  architecture.md  backends.md  composability.md  concurrency.md  context-tree.md  development.md  loop-engineering.md  memory.md  modes.md  onboarding.md  orchestration.md  positioning.md  roadmap.md  self-repair.md  task-tracking.md  teams.md  upgrades.md  yggdrasil.md
docs/diagrams/: README.md  flotilla-team.drawio  flume-team.drawio  hird-team.drawio  memory-overview.mmd  mermaid-config.json  orchestrator-blackboard.mmd  system-map.mmd
examples/okf-bundle/: index.md  log.md
(+69 files in other folders)
