# SPDX-License-Identifier: Apache-2.0

[package]
name = "artesian-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
artesian-core = { path = "../artesian-core" }
artesian-process-agent = { path = "../artesian-process-agent" }
clap.workspace = true
delta.workspace = true
sandbox = { path = "../sandbox" }
aquifer = { path = "../aquifer" }
serde.workspace = true
serde_json.workspace = true
culvert = { path = "../culvert" }
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
basin = { path = "../basin" }

[features]
qdrant = ["aquifer/qdrant"]

[[bin]]
name = "brunnr"
path = "src/main.rs"

[[bin]]
name = "brunnrd"
path = "src/brunnrd.rs"

[dev-dependencies]
artesian-test-support.workspace = true

[lints]
workspace = true
