# SPDX-License-Identifier: Apache-2.0

[package]
name = "artesian-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
artesian-core = { path = "../artesian-core" }
chrono.workspace = true
artesian-process-agent = { path = "../artesian-process-agent" }
clap.workspace = true
flume.workspace = true
sandbox = { path = "../sandbox" }
aquifer = { path = "../aquifer" }
artesian-mcp = { path = "../artesian-mcp" }
serde.workspace = true
serde_json.workspace = true
headrace = { path = "../headrace" }
headgate = { path = "../headgate" }
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
basin = { path = "../basin" }

[features]
qdrant = ["aquifer/qdrant", "artesian-mcp/qdrant"]
llm = ["headgate/llm", "artesian-mcp/llm"]
# The unified `artesian` binary also serves the MCP server (invoked as `artesian-mcp`); `http`
# forwards to enable its streamable-HTTP transport.
http = ["artesian-mcp/http"]

# Single multi-call binary: dispatches to the CLI, the MCP server (`artesian-mcp`), and the daemon
# (`artesiand`) by invocation name, so they share one copy of the runtime instead of three.
[[bin]]
name = "artesian"
path = "src/main.rs"

[dev-dependencies]
artesian-test-support.workspace = true

[lints]
workspace = true
