# SPDX-License-Identifier: Apache-2.0

[package]
name = "artesian-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
