# SPDX-License-Identifier: Apache-2.0

[package]
name = "artesian-process-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
artesian-core = { path = "../artesian-core" }
futures-util.workspace = true
nix.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
artesian-test-support.workspace = true

[lints]
workspace = true
