# SPDX-License-Identifier: Apache-2.0

[package]
name = "brunnr-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mimisbrunnr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true

[dev-dependencies]
mimisbrunnr = { workspace = true, features = ["qdrant"] }

[lints]
workspace = true
