# SPDX-License-Identifier: Apache-2.0

[package]
name = "gauge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
llm = ["headgate/llm"]

[dependencies]
headgate = { path = "../headgate" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "gauge-bench"
path = "src/bin/gauge_bench.rs"

[[bin]]
name = "gauge-eval"
path = "src/bin/gauge_eval.rs"

[dev-dependencies]
futures-util.workspace = true

[lints]
workspace = true
