# SPDX-License-Identifier: Apache-2.0

[package]
name = "mimisbrunnr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fastembed = { workspace = true, optional = true }
futures-util.workspace = true
pgvector = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlite-vec = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { workspace = true, optional = true }
toml.workspace = true

[features]
default = ["sqlite-vec"]
pgvector = ["vector", "dep:pgvector", "dep:tokio-postgres"]
qdrant = ["vector", "dep:qdrant-client", "dep:reqwest"]
sqlite-vec = ["vector", "dep:rusqlite", "dep:sqlite-vec"]
vector = ["dep:fastembed"]

[dev-dependencies]
brunnr-test-support.workspace = true


[lints.rust]
unsafe_code = "allow"

[lints.clippy]
derive_partial_eq_without_eq = "warn"
large_futures = "warn"
manual_let_else = "warn"
