# SPDX-License-Identifier: Apache-2.0

[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
artesian-test-support.workspace = true
tokio.workspace = true

[lints]
workspace = true
