# SPDX-License-Identifier: Apache-2.0

[package]
name = "thingr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
brunnr-core = { path = "../brunnr-core" }
chrono.workspace = true
futures-util.workspace = true
mimisbrunnr = { path = "../mimisbrunnr" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
brunnr-test-support.workspace = true

[lints]
workspace = true
